tests/semantic/ifstmt_err1.expected

Semantic Error [line 6]: value: "test"
	Invalid conditional type: Expected type(s) 'Boolean'; found 'Integer' instead.
