tests/semantic/ifstmt_err1.mtp
(*Test if condition with non-Boolean value*)
const test := 1;
var a, b: integer;

begin
	if test then
	   write('Hello')
	;
end.